[package]
name = "ren"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fill"
path = "src/fill.rs"

[[bin]]
name = "look"
path = "src/look.rs"

[profile.release]
debug = 1
lto = true

[dependencies]
chrono = "0.4.23"
csv = "1.1.6"
env_logger = "0.9.3"
flate2 = "1.0.24"
futures = "0.3.25"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
